# FastAPIFileServer

./: .gitignore  LICENSE  README.md  dev_run.py  pyproject.toml  requirements.txt
src/fastapi_file_server/: __init__.py  config.py  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py  templates.py
src/fastapi_file_server/libs/: __init__.py  api_depends.py  depends.py  hash.py  license.py  session_depends.py  token.py
src/fastapi_file_server/statics/auth/: join.js  login.js  me.js  password_edit.js
src/fastapi_file_server/statics/license/: list.js
src/fastapi_file_server/statics/manage/user/: license_edit_modal.js  list.js
src/fastapi_file_server/templates/: base.html  index.html  macros.j2  nav.html
src/fastapi_file_server/templates/auth/: join.html  login.html  logout.html  me.html  password_edit.html
src/fastapi_file_server/templates/license/: list.html
src/fastapi_file_server/templates/manage/user/: list.html
src/fastapi_file_server/views/: auth.py  license.py  manage.py
src/fastapi_file_server/views/apis/: __init__.py  auth.py  file.py  license.py
